# fhircraft

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: CI.yaml  docs.yaml  package.yaml
SUMMARY/: index.html
docs/: SUMMARY.md  index.md  installation.md  quickstart.md
docs/basics/: conversion.md  fhir-profiling.md  openapi-fhir-rules.md
docs/experimental/: openapi-fhir-rules.md
fhir_openapi/: openapi.py  path.py  profiles.py  utils.py
fhircraft/: command_line.py  mapping.py  utils.py
fhircraft/fhir/: fhirpath.py  (+4 more)
fhiropenapi/: factory.py  fhirpath.py
installation/: index.html
quickstart/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
stylesheets/: extra.css
test/: test_factory.py  test_fhir_fhirpath.py  test_fhir_lexer.py  test_fhir_parser.py  test_fhir_path.py  test_fhir_path_engine.py  test_fhir_path_engine_additional.py  test_fhir_path_engine_boolean.py  test_fhir_path_engine_collection.py  test_fhir_path_engine_combining.py  test_fhir_path_engine_conversion.py  test_fhir_path_engine_core.py  test_fhir_path_engine_equality.py  test_fhir_path_engine_existence.py  test_fhir_path_engine_filtering.py  test_fhir_path_engine_literals.py  test_fhir_path_engine_math.py  test_fhir_path_engine_navigation.py  test_fhir_path_engine_strings.py  test_fhir_path_engine_subsetting.py  test_fhir_path_engine_types.py  test_fhir_path_find.py  test_fhir_path_lexer.py  test_fhir_path_parser.py  test_fhir_path_utils.py  test_fhir_profiles.py  test_fhir_profiling_factory.py  test_fhir_profiling_slicing.py  test_fhir_resources_construct_core.py  test_fhir_resources_factory.py  test_fhir_resources_generator.py  test_fhir_resources_primitive_types.py  test_fhirpath.py  test_integration.py  test_mapping.py  test_openapi.py  test_openapi_parser.py  test_path.py  test_profiles.py  test_system_conversion.py  (+1 more)
(+151 files in other folders)
